# agent-workspace

./: .gitignore  Cargo.toml  README.md
.claude/: settings.json
.claude/skills/verify/: SKILL.md
client/: check-locales.mjs  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vite.proxy-log.test.mjs  vite.proxy-log.ts
client/public/: site.webmanifest
client/src/: App.tsx  agents.ts  api.ts  clipboard.ts  connectionStore.ts  format.ts  gestureLog.ts  main.tsx  paths.ts  secureUrl.ts  status.ts  store.ts  styles.css  terminalTypes.ts  useActiveSession.ts  useDaemons.ts  useIsPhone.ts  useIsTouch.ts  useMediaQuery.ts  useTabAlert.ts  useTerminalPaste.ts  useVisualViewportHeight.ts  vscode.ts
client/src/components/: BranchManagerDialog.tsx  CommitModal.tsx  ConnectionDialog.tsx  DeckModeLink.tsx  DeckShell.tsx  DesktopShell.tsx  DiffModal.tsx  DirectoryPicker.tsx  MobileShell.tsx  NewSessionDialog.tsx  NewWorkspaceDialog.tsx  PanelResizer.tsx  PasteSheet.tsx  RightPanel.tsx  SessionList.tsx  TermControlPanel.tsx  TermKeyBar.tsx  Terminal.tsx  UsageModal.tsx
client/src/i18n/: i18next.d.ts  index.ts  labels.ts  time.ts
client/src/i18n/locales/: en.json
crates/asm-relay/: Cargo.toml
crates/asm-relay/src/: agent.rs  lib.rs  main.rs  protocol.rs  server.rs  tls.rs  transport.rs
crates/asm-relay/tests/: e2e.rs  tls.rs
crates/asmux/: Cargo.toml
crates/asmux-wire/: Cargo.toml
crates/asmux-wire/schema/: asmux.fbs
crates/asmux-wire/src/: generated.rs  lib.rs
crates/asmux/src/: frame.rs  lib.rs  main.rs  registry.rs  ring.rs  server.rs  session.rs  socket.rs
crates/asmux/tests/: e2e.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: auth.rs  config.rs  conflict_resolve.rs  db.rs  domain.rs  main.rs  session_manager.rs  source_control.rs  summarize.rs  tls.rs  util.rs  workspace.rs
crates/daemon/src/api/: auth.rs  fs.rs  mod.rs  paste.rs  scm.rs  ws.rs
crates/daemon/src/backend/: asmux_client.rs  mod.rs  native.rs  sidecar.rs
crates/daemon/src/plugins/: attention.rs  builtin.rs  conversation.rs  deck.rs  fork.rs  mod.rs  title.rs  usage.rs
crates/daemon/src/plugins/attention/: claude.rs  codex.rs
crates/daemon/src/session_manager/: fork.rs  mod.rs  monitor.rs  workspaces.rs
docs/: architecture.excalidraw  architecture.md  asmux-protocol.md  backlog.md  classifier-measurement.md  connectivity-execution-plan.md  deck.md  deployment.md  durable-sessions.md  fork-session.md  i18n.md  image-paste.md  mobile-ui.md  mvp-execution-plan.md  refactoring-plan.md  requirements.md  security-followups.md  session-recovery.md  setup.md  terminal-scrollback.md  vscode-over-relay-plan.md
scripts/: _asm_common.sh  archive-kickout-test.mjs  attach-button-test.mjs  branch-mgmt-test.mjs  branch-mgmt-ui-test.mjs  commit-button-test.mjs  confirm-destructive-test.mjs  copy-paste-test.mjs  dev-proxy-test.mjs  durable-restart-test.mjs  fork-session-test.mjs  gateway-test.mjs  holder-theft-test.mjs  init-git-unborn-test.mjs  lan-enroll-test.mjs  mobile-paste-test.mjs  mobile-shell-test.mjs  model-select-test.mjs  new-folder-test.mjs  paste-test.mjs  relay-test.mjs  restart-daemon.sh  setup.sh  smoke.mjs  start.sh  status.sh  stop.sh  term-jump-test.mjs  termscroll-test.mjs  token.sh  touch-clipboard-test.mjs  touch-select-test.mjs  wizard.sh  workspace-upload-test.mjs  workspace-upload-ui-test.mjs  worktree-test.mjs  ws-auth.mjs
scripts/lib/: testenv.mjs
