[workspace]
resolver = "2"
members = ["crates/daemon"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Agent Session Manager"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portable-pty = "0.8"
vt100 = "0.15"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
futures = "0.3"
directories = "5"
parking_lot = "0.12"
async-trait = "0.1"
