[workspace]
resolver = "2"
members = ["crates/daemon", "crates/asmux", "crates/asmux-wire"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Agent Session Manager"]

# vt100 0.15 has a debug-only arithmetic overflow in `Grid::visible_rows` when
# the scrollback view offset exceeds the screen height (`rows_len - offset` in
# a `take()` that release builds wrap harmlessly). We view deep scrollback to
# build attach repaints (backend::repaint_with_history), so align dev/test
# behavior with release for this one unmaintained crate. The wrapped `take` is
# only ever observed through the first visible row, which is computed correctly
# at every offset — see the invariant note in repaint_with_history.
[profile.dev.package.vt100]
overflow-checks = false

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portable-pty = "0.8"
vt100 = "0.15"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
futures = "0.3"
directories = "5"
parking_lot = "0.12"
async-trait = "0.1"
planus = "1.3"
nix = { version = "0.31", features = ["signal", "process"] }
