[package]
name = "asm-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Public rendezvous relay for the Agent Session Manager (opaque node routing over multiplexed WSS)"

[[bin]]
name = "asm-relay"
path = "src/main.rs"

[lib]
name = "asm_relay"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
parking_lot.workspace = true
tokio-tungstenite.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body-util.workspace = true
