[package]
name = "asm-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Agent Session Manager daemon"

[[bin]]
name = "asm-daemon"
path = "src/main.rs"

[dependencies]
asmux = { path = "../asmux" }
planus.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
portable-pty.workspace = true
vt100.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
directories.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
