[package]
name = "asm-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Agent Session Manager daemon"

[[bin]]
name = "asm-daemon"
path = "src/main.rs"

[dependencies]
asmux = { path = "../asmux" }
asm-relay = { path = "../asm-relay" }
planus.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
portable-pty.workspace = true
vt100.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
directories.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
ureq.workspace = true
# HTTPS on the daemon's own listener (ASM_TLS_CERT/KEY). Certificate parsing is
# reused from asm-relay::tls; these drive the accept loop.
rustls.workspace = true
tokio-rustls.workspace = true
hyper.workspace = true
hyper-util.workspace = true
